# app/lib/api/model/customerProductCreateVariant.ts
@@ -4,10 +4,14 @@
  * Booking Shopify Api
  * OpenAPI spec version: 1.0.0
  */
+import type {CustomerProductCreateVariantProduct} from './customerProductCreateVariantProduct';
 import type {CustomerProductSelectedOptions} from './customerProductSelectedOptions';
 
 export interface CustomerProductCreateVariant {
+  compareAtPrice: string;
   id: number;
+  price: string;
+  product: CustomerProductCreateVariantProduct;
   selectedOptions: CustomerProductSelectedOptions[];
   title: string;
 }
